--- a/backend/accounts/templates/accounts/main.html
+++ b/backend/accounts/templates/accounts/main.html
@@ -1,7 +1,6 @@
 {% block content %}
-  {% for food in foods %}
-    {{food.name}}
-    <h1 style='text-align:center'>메인 화면, 이 곳에서 카메라 실행 화면으로 이동합니다..</h1>
-    <h2 style='text-align:center'> <a href="/camera">[촬영하기]</a></h2>
-  {% endfor %}
+    <meta charset="utf-8">
+    <img src="" width=200, height=100>
+    <h1 style='text-align:center'>hello!</h1>
+    <h2 style='text-align:center'> <a href="/camera">[camera]</a></h2>
 {% endblock  %}
