--- a/backend/accounts/templates/accounts/camera2.html
+++ b/backend/accounts/templates/accounts/camera2.html
@@ -1,5 +1,4 @@
 {% block content %}
-  <meta charset="utf-8">
   <h1 style='text-align:center'>capture complete!</h1>
   <br>
   {{ this_user }}
@@ -8,5 +7,5 @@
   {% for food in recommend_foods %}
      <b>{{food}} </b>
   {% endfor %}
-  
+  {% comment %} {{ recommend_foods}} {% endcomment %}
 {% endblock  %}
